{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 1064,
  "lineage": "e0f1c000-64ac-1e3d-df68-81e87d8c1918",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07332bbfe383589a5",
            "public_dns": "ec2-52-59-16-71.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.16.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "navvisElb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:577909534178:loadbalancer/navvis-demo-elb",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "navvis-demo-elb-498332645.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "navvis-demo-elb",
            "idle_timeout": 60,
            "instances": [
              "i-05fc9836b19cadb81",
              "i-0deccb340ef35b4b7",
              "i-0ef4a097a84b73975"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "navvis-demo-elb",
            "security_groups": [
              "sg-0d8cfc0f73b8b85c4"
            ],
            "source_security_group": "577909534178/navvis_demo_elb",
            "source_security_group_id": "sg-0d8cfc0f73b8b85c4",
            "subnets": [
              "subnet-023ace35bd32caf76",
              "subnet-02e907b4fcb6e798a",
              "subnet-0690ba28d9135ddd2"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "depends_on": [
            "aws_instance.az1_instances",
            "aws_security_group.elb",
            "aws_subnet.subnet_eu_central_1a",
            "aws_subnet.subnet_eu_central_1b",
            "aws_subnet.subnet_eu_central_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "az1_instances",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-0ef4a097a84b73975",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ef4a097a84b73975",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-092cb3333b6421b20",
            "private_dns": "ip-172-16-2-153.eu-central-1.compute.internal",
            "private_ip": "172.16.2.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-001486ebd5f4d55ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02e907b4fcb6e798a",
            "tags": {
              "Name": "navvis-demo-az1-instances-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_instance.bastion",
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1b"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-0deccb340ef35b4b7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0deccb340ef35b4b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbf6448285215798",
            "private_dns": "ip-172-16-2-42.eu-central-1.compute.internal",
            "private_ip": "172.16.2.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04eb97021e0c7ea96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02e907b4fcb6e798a",
            "tags": {
              "Name": "navvis-demo-az1-instances-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_instance.bastion",
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1b"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-05fc9836b19cadb81",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05fc9836b19cadb81",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8ca8254095257cb",
            "private_dns": "ip-172-16-2-99.eu-central-1.compute.internal",
            "private_ip": "172.16.2.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dc0ad56157afcdcc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02e907b4fcb6e798a",
            "tags": {
              "Name": "navvis-demo-az1-instances-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_instance.bastion",
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "az2_instances",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-078253d97a9eec881",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-078253d97a9eec881",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-049ea72330cf93a15",
            "private_dns": "ip-172-16-3-105.eu-central-1.compute.internal",
            "private_ip": "172.16.3.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bffe1f28e365b206",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-023ace35bd32caf76",
            "tags": {
              "Name": "navvis-demo-az2-instances-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_instance.bastion",
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1c"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-023ae3882fc2210c0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-023ae3882fc2210c0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9336c4d01a24ac1",
            "private_dns": "ip-172-16-3-146.eu-central-1.compute.internal",
            "private_ip": "172.16.3.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0732391b9c22f04a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-023ace35bd32caf76",
            "tags": {
              "Name": "navvis-demo-az2-instances-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_instance.bastion",
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdab515472ca0bac",
            "arn": "arn:aws:ec2:eu-central-1:577909534178:instance/i-0d9ddc0e617639ed2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d9ddc0e617639ed2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "navvis-demo",
            "monitoring": false,
            "primary_network_interface_id": "eni-0641bd1fb21f31d25",
            "private_dns": "ip-172-16-1-247.eu-central-1.compute.internal",
            "private_ip": "172.16.1.247",
            "public_dns": "ec2-52-59-216-58.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.216.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bd1ea7870543571d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03b3ec27fe2254a0a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0690ba28d9135ddd2",
            "tags": {
              "Name": "navvis-demo-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b3ec27fe2254a0a"
            ]
          },
          "depends_on": [
            "aws_key_pair.sshKeyPair",
            "aws_security_group.vpc_private_sg",
            "aws_subnet.subnet_eu_central_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f505d6d7fbbfd39d",
            "owner_id": "577909534178",
            "tags": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07332bbfe383589a5",
            "id": "nat-00e4fedbc4a63d933",
            "network_interface_id": "eni-0760e577745ae2d8c",
            "private_ip": "172.16.1.83",
            "public_ip": "52.59.16.71",
            "subnet_id": "subnet-0690ba28d9135ddd2"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet_eu_central_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f505d6d7fbbfd39d",
            "id": "r-rtb-00e102f9ded68c1971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e102f9ded68c197",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c04537d29da88d571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-00e4fedbc4a63d933",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c04537d29da88d57",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c04537d29da88d57",
            "owner_id": "577909534178",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_eu_central_1a_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5336a8d2c871017",
            "route_table_id": "rtb-00e102f9ded68c197",
            "subnet_id": "subnet-0690ba28d9135ddd2"
          },
          "depends_on": [
            "aws_subnet.subnet_eu_central_1a",
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_eu_central_1b_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085bc3b49a76fb5af",
            "route_table_id": "rtb-0c04537d29da88d57",
            "subnet_id": "subnet-02e907b4fcb6e798a"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnet_eu_central_1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_eu_central_1c_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def6735ceb6e3403",
            "route_table_id": "rtb-0c04537d29da88d57",
            "subnet_id": "subnet-023ace35bd32caf76"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnet_eu_central_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:security-group/sg-0d8cfc0f73b8b85c4",
            "description": "Security group for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8cfc0f73b8b85c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "navvis_demo_elb",
            "name_prefix": null,
            "owner_id": "577909534178",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:security-group/sg-03b3ec27fe2254a0a",
            "description": "common security group for all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3ec27fe2254a0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24",
                  "172.16.2.0/24",
                  "172.16.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "navvis-demo-ssh-sg",
            "name_prefix": null,
            "owner_id": "577909534178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "{var.project_name}-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_eu_central_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:subnet/subnet-0690ba28d9135ddd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0690ba28d9135ddd2",
            "map_public_ip_on_launch": true,
            "owner_id": "577909534178",
            "tags": {
              "Name": "Subnet az 1a"
            },
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_eu_central_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:subnet/subnet-02e907b4fcb6e798a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-02e907b4fcb6e798a",
            "map_public_ip_on_launch": true,
            "owner_id": "577909534178",
            "tags": {
              "Name": "Subnet az 1b"
            },
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_eu_central_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:subnet/subnet-023ace35bd32caf76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-023ace35bd32caf76",
            "map_public_ip_on_launch": true,
            "owner_id": "577909534178",
            "tags": {
              "Name": "Subnet az 1c"
            },
            "vpc_id": "vpc-0561fbf2ecba722b6"
          },
          "depends_on": [
            "aws_vpc.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_name",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:577909534178:vpc/vpc-0561fbf2ecba722b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05c326bdbbbf930cb",
            "default_route_table_id": "rtb-00e102f9ded68c197",
            "default_security_group_id": "sg-006796d129b607d56",
            "dhcp_options_id": "dopt-df8136b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0561fbf2ecba722b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e102f9ded68c197",
            "owner_id": "577909534178",
            "tags": {
              "Name": "navvis-demo"
            }
          }
        }
      ]
    }
  ]
}